# py-o365-smtp

./: .checkov.yml  .gitignore  .mega-linter.yml  LICENSE  pyproject.toml
.github/workflows/: megalinter.yml
megalinter-reports/: IDE-config.txt
src/py-o365-smtp/: __init__.py  __main__.py  config.toml
